# Praan-Project

./: README.md
Backend/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json  postman_collection.json
Backend/src/: index.ts
Backend/src/controllers/: commandController.ts  deviceController.ts  preCleanController.ts  scheduleController.ts
Backend/src/database/: db.ts
Backend/src/models/: Command.ts  DeviceState.ts  Schedule.ts  Telemetry.ts
Backend/src/mqtt/: mqttClient.ts
Backend/src/routes/: deviceRoutes.ts  preCleanRoutes.ts  scheduleRoutes.ts
Backend/src/services/: schedulerService.ts
Firmware/: README.md  sdkconfig
Firmware/main/: CMakeLists.txt  app_mqtt.c  app_mqtt.h  command_handler.c  command_handler.h  config.h  device_state.c  device_state.h  idf_component.yml  main.c  sensor_manager.c  sensor_manager.h  wifi_manager.c  wifi_manager.h
Frontend/: README.md  package-lock.json
Frontend/app/: globals.css  layout.tsx  page.tsx
Frontend/components/: command-history.tsx  device-controls.tsx  device-list.tsx  device-status.tsx  device-telemetry.tsx  pre-clean-controller.tsx  schedule-manager.tsx
Simulator/: README.md  device_state.json  package-lock.json  package.json
Simulator/src/: commandHandler.ts  config.ts  deviceState.ts  index.ts  mqttClient.ts  sensors.ts  types.ts
